--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="1" android:versionName="1.00" android:installLocation="internalOnly"
+          android:versionCode="2" android:versionName="1.10" android:installLocation="internalOnly"
           package="com.alr.tasks">
-    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="22"/>
+    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="24"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app_name2" android:icon="@drawable/app_logo"
                  android:theme="@android:style/Theme.NoTitleBar"
+                 android:fullBackupContent="true"
                  android:allowBackup="true"
                  android:backupAgent=".BackupAgent"
                  android:restoreAnyVersion="true">
@@ -29,14 +30,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SchedActivity"></activity>
-        <activity android:name=".SetupActivity"></activity>
-        <activity android:name=".ServicesActivity"></activity>
-        <activity android:name=".TimeActivity"></activity>
-        <activity android:name=".DaysActivity"></activity>
-        <activity android:name=".VolumeActivity"></activity>
-        <activity android:name=".OnOffActivity"></activity>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".SchedActivity"/>
+        <activity android:name=".SetupActivity"/>
+        <activity android:name=".ServicesActivity"/>
+        <activity android:name=".TimeActivity"/>
+        <activity android:name=".DaysActivity"/>
+        <activity android:name=".VolumeActivity"/>
+        <activity android:name=".OnOffActivity"/>
         <activity android:name=".BlueToothRequestActivity"/>
         <activity android:name=".AboutActivity"/>
 
